@@ -1,15 +1,9 @@
 
 -------------------- High priority ---------------------
 
-Finalise DnD API.
- 
 Fix bug that thread sample reports about non-finished threads.
 
-Added wxExpandedImageList to wxTreeControl.
-
 More testing of Unicode support.
-
-Make wxSockets work on all platform.
 
 Add ID based i18n system as a replacement for the
   unelegant gettext system.
@@ -19,8 +13,6 @@ Add controls to wxToolbar.
 Add TIFF handler. Someone? (Hint, hint).
 
 Improve, update translations. Install *.mo files somewehere.
-
-Sleep, eat, walk, study, shave, read, play piano and wash less.
 
 -------------------- Medium priority ---------------------
 
